--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.1",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
+    "http-proxy-middleware": "^2.0.6",
     "match-sorter": "^6.3.1",
     "material-react-table": "^1.14.0",
     "rc-dropdown": "^4.1.0",
@@ -79,6 +80,5 @@
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "typescript-plugin-css-modules": "^5.0.1"
-  },
-  "proxy": "http://localhost:3100/"
+  }
 }
